Access of mark word should use oopDesc::mark_offset_in_bytes() instead of '0'

XMLWordPrintable

    • b21
    • generic
    • generic

      In several places in Hotspot's assembly routines, we're using Address(obj, 0) to access the object's mark word. This is bad style and makes it very hard to find all the places where the mark word is used. It should use Address(obj, oopDesc::mark_offset_in_bytes()) instead.

            Assignee:
            Roman Kennke
            Reporter:
            Roman Kennke
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: