8167659: Access of mark word should use oopDesc::mark_offset_in_bytes() instead of '0'

Use oopDesc::mark_offset_in_bytes() when addressing mark word, instead of '0'.

Reviewed-by: dholmes, coleenp